--- a/view/src/main/res/values/strings.xml
+++ b/view/src/main/res/values/strings.xml
@@ -1,5 +1,10 @@
 <resources>
-    <string name="app_name">Base App</string>
+    <string name="app_name">Search Reddit</string>
+
+    <string name="search">Search</string>
+    <string name="search_term">Search Term</string>
+    <string name="retrieving_posts">Retrieving Posts</string>
+
     <string name="hello_world">Hello World</string>
     <string name="beautiful_android">A Beautiful Android!</string>
 
@@ -8,4 +13,6 @@
     <string name="this_is_third_fragment">This is the Third Fragment</string>
     <string name="push_fragment">Push Fragment</string>
     <string name="main_activity">Main Activity</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
